salesforce_ant_45.0/sample/codepkg/objects/Order.object
<CustomObject>
    <fields>
        <fullName>App_Discount_Value__c</fullName>
        <label>App Discount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>App_Earning_Value__c</fullName>
        <label>App Earning Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Taxes__c</fullName>
        <label>Applied Taxes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>9.7%</fullName>
                </value>
                <value>
                    <fullName>8.9%</fullName>
                </value>
                <value>
                    <fullName>11.2%</fullName>
                </value>
                <value>
                    <fullName>10.4%</fullName>
                </value>
                <value>
                    <fullName>5.56%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking_Date_Time__c</fullName>
        <label>Booking Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Booking_Note__c</fullName>
        <description>Extra Note</description>
        <label>Booking Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Status_Message__c</fullName>
        <label>Booking Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Type__c</fullName>
        <label>Booking Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_Commission_Value__c</fullName>
        <label>Cart Commission Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cart_Discount__c</fullName>
        <label>Cart Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cart_Total__c</fullName>
        <label>Cart Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Code__c</fullName>
        <label>Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Charge__c</fullName>
        <label>Delivery Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Account_Message__c</fullName>
        <label>Driver Account Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Commission_Message__c</fullName>
        <label>Driver Commission Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Driver_Commission_Percentage__c</fullName>
        <label>Driver Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Driver_Commission_Value__c</fullName>
        <label>Driver Commission Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Commission_to_App_Value__c</fullName>
        <label>Driver Commission to App Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Earning_Value__c</fullName>
        <label>Driver Earning Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Tip__c</fullName>
        <label>Driver Tip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Total_Earning__c</fullName>
        <label>Driver Total Earning</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Drop_Address__c</fullName>
        <description>Address Line 1</description>
        <label>Drop Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Drop_Area__c</fullName>
        <label>Drop Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_City__c</fullName>
        <label>Drop City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Country__c</fullName>
        <label>Drop Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Place_Name__c</fullName>
        <label>Drop Place Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Postal_Code__c</fullName>
        <label>Drop Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Time__c</fullName>
        <label>Due Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <label>Order Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Type_Message__c</fullName>
        <label>Order Type Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PG_Commission_Name__c</fullName>
        <label>PG Commission Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PG_Earning_Value__c</fullName>
        <label>PG Earning Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_By_Wallet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid By Wallet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Address__c</fullName>
        <description>Address Line 1</description>
        <label>Pickup Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pickup_Area__c</fullName>
        <label>Pickup Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_City__c</fullName>
        <label>Pickup City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Country__c</fullName>
        <label>Pickup Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Place_Name__c</fullName>
        <label>Pickup Place Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Postal_Code__c</fullName>
        <label>Pickup Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promocode_Discount__c</fullName>
        <description>Discount Key</description>
        <label>Promocode Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PushTopic_Notification__c</fullName>
        <label>PushTopic Notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_App_Commission__c</fullName>
        <label>Store App Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Commission_Message__c</fullName>
        <label>Store Commission Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Commission_Percentage__c</fullName>
        <label>Store Commission Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Store_Commission_Type__c</fullName>
        <label>Store Commission Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Commission_Value__c</fullName>
        <label>Store Commission Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Commission_to_App_Value__c</fullName>
        <label>Store Commission to App Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Delivery_Fee__c</fullName>
        <label>Store Delivery Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Discount_Value__c</fullName>
        <label>Store Discount Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Dispatcher__c</fullName>
        <description>Nothing to do pending for the order.</description>
        <label>Store Dispatcher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Driver_Type__c</fullName>
        <label>Store Driver Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Earning_Value__c</fullName>
        <label>Store Earning Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Store_Free_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Free Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Store_Id__c</fullName>
        <description>Unique Mongo Id</description>
        <label>Store Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Total_Without_Tax__c</fullName>
        <label>Sub Total Without Tax</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Taxes__c</fullName>
        <label>Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>